change url to netlify

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
 author:
   - name: Lea Delescluse
     bio: Lea Delescluse est une artiste en peinture decorative. Diplomée des beaux-arts de Florence, elle travail pour le théatre et le cinéma avant de se spécialiser en trompe l'oeil et peinture décorative.
-    url: http://Lea-delescluse.github.io/atelier
+    url: http://leatelier.netlify.com
 
 # Pagination settings
 pagination:
