--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:year/:month/:day/:title/
 # google_analytics:
 
 name: Lea Delescluse
-title: Atelier Lea Delescluse
+title: Atelier Léa Delescluse
 description: >
   L'atelier Lea Delescluse est le lieu d'exposition virtuel pour mes travaux artistiques et decoratifs
 url: https://leatelier.netlify.com
@@ -31,7 +31,7 @@ mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
 # Author settings
 author:
   - name: Lea Delescluse
-    bio: Lea Delescluse est une artiste en peinture decorative. Diplomée des beaux-arts de Florence, elle travail pour le théatre et le cinéma avant de se spécialiser en trompe l'oeil et peinture décorative.
+    bio: Lea Delescluse est une artiste en peinture decorative. Diplomée des beaux-arts de Florence, elle travaille pour le théatre et le cinéma avant de se spécialiser en trompe l'oeil et peinture décorative.
     url: https://leatelier.netlify.com
 
 # Pagination settings
