--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ url: https://leatelier.netlify.com
 default_img: /assets/images/mosh.jpg
 social:
   - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
+    url: https://www.instagram.com/leadelec/
   - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
+    url: https://www.linkedin.com/in/atelier-lea-delescluse-34000/
 
 # Contact settings
 contact_img: /assets/images/mosh.jpg
